# Graphik

./: .gitignore  CHANGELOG_INTERNAL.md  Graphik.onefile.spec  Graphik.spec  README.md  app.py  build_windows.bat  build_windows_onefile.bat  description.md  launcher.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml  user_prefs.json
data/: sample_measurements.csv
pages/: common.py  import_wizard.py  normal_mode.py  statistics_mode.py
scripts/: check_function_lengths.py
services/: analysis_service.py  export_service.py  import_service.py  state_service.py  validation_service.py
src/: __init__.py  calculations.py  config.py  data_io.py  errors.py  export_pipeline.py  export_utils.py  geometry.py  i18n.py  logging_utils.py  mode_models.py  mpl_export.py  plotting.py  preprocessing.py  session_types.py  statistics.py  ui_helpers.py  ui_state.py  ux_models.py
tests/: conftest.py  test_calculations.py  test_data_io.py  test_export_pipeline.py  test_export_utils.py  test_i18n.py  test_import_validation.py  test_mpl_export_parity.py  test_normal_line_extents.py  test_packaged_smoke.py  test_statistics.py  test_ui_helpers.py  test_ui_state.py
