[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ["py312"]
include = '\\.pyi?$'
extend-exclude = '''
/(
    \.venv
  | build
  | dist
  | dist_portable
)/
'''

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true
skip_gitignore = true
skip = [".venv", "build", "dist", "dist_portable"]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["build", "dist", "dist_portable", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501", "B008", "B023"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
exclude = "(^build/|^dist/|^dist_portable/|^\\.venv/)"
files = ["app.py", "pages", "services", "src", "tests"]